# napari-split-blob-labels

./: .gitignore  LICENSE  README.md  bug1.py  mkdocs.yml  run_example.ipynb  run_example.py  setup.cfg  tiff2nifti.py  tmp.py  tox.ini
docs/: index.md
src/adaptive_brush/: __init__.py  _function.py  utils.py
src/adaptive_brush/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
